Migrate Hospital_Servlet1 to Java 21 and add modernization power
Java 17 -> 21. Build verified at release 21, 49/49 tests passing
(identical to pre-migration baseline, zero regressions).

Build:
- pom.xml java.version/source/target 17 -> 21

Legacy layer removed (19 files, 37 -> 18 main sources):
- 14 @WebServlet classes superseded by @Controller
- 4 *Dao classes superseded by JdbcTemplate *Repository
- ConnectionHelper static DataSource bridge
- Removes ~30 printStackTrace (S1148) and 4 System.out/err (S106)
  as a side effect

Ordering note: HomeController instantiated DoctorDao/SpecialistDao
directly, so it was rewired to constructor-inject the repositories and
recompiled BEFORE any deletion. Deleting first would have broken the
build. This also removed 4 'new' calls on a @Repository bean that had
been bypassing Spring DI.

Java 21 features:
- Text blocks for 5 SQL statements
- list.get(0) -> list.getFirst() (sequenced collections)
- Virtual threads enabled

Configuration:
- application.properties -> application.yml + dev/prod profiles
- Credentials resolve from environment at runtime; prod has no fallbacks
- Removes plaintext Azure SQL credentials from the working tree

Tooling:
- .kiro/powers/app-modernization-power: single-prompt 7-phase migration
  workflow for Java and .NET, with phase-gate state tracking so a run
  survives context compaction
- Consolidated 3 overlapping preToolUse:write hooks into 1 (each cost an
  agent round-trip per file write)
- Maven 3.9.9 bootstrapped into gitignored .tools/ (no package manager
  available on this machine)

Secrets:
- .kiro/settings/mcp.json gitignored; committed .example with placeholder
- Token prompted at runtime, never stored in env vars or committed files

Phase 7 (SonarQube) is indeterminate, not pass/fail: the gate reports
ERROR for main as analyzed 2026-08-10, but this work sits on an
unanalyzed branch. See Migration/Java21-Migration-Summary.md.